<resources>
    <string name="app_name">ListLock</string>
    <string name="title_activity_listlock">ListLock</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="action_pin">Set PIN</string>
    <string name="action_log_out">Log out</string>
    <string name="not_logged_in">Please log in to your Spotify\u00AE account</string>
    <string name="welcome_user">Welcome, %s</string>
    <string name="login">Log in</string>
    <string name="login_fail">Login failed</string>
    <string name="login_cancel">Login canceled</string>
    <string name="auth_success">Authentication successful</string>
    <string name="player_terminate_fail">Unable to terminate current player (exceptions may occur)</string>
    <string name="user_info_fail">Could not retrieve user information</string>
    <string name="start">Let the music play!</string>
    <string name="song_list_empty">Add some songs first</string>
    <string name="profile_image">profile image</string>
    <string name="not_premium">A Spotify\u00AE Premium account is required to stream tracks</string>
    <string name="header_title">Title</string>
    <string name="header_artist">Artist</string>
    <string name="header_duration">Duration</string>
    <string name="no_profile_image">Could not retrieve profile image</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_failed">Search failed</string>
    <string name="add_playlist">&#xf067; &#xf0ca;</string>
    <string name="add_song">&#xf067; &#xf001;</string>
    <string name="add_song_failed">Unable to add songs</string>
    <string name="play_or_pause_failed">Cannot play/pause</string>
    <string name="delete_song_conformation">Are you sure you want delete %1$s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="song_removed">%1$s removed</string>
    <string name="song_not_in_list">%1$s not in list (anymore)</string>
    <string name="song_added">%1$s added</string>
    <string name="title_activity_playlist">PlaylistActivity</string>
    <string name="playlists_for_name">Playlists for %1$s</string>
    <string name="auto_login_failed">Auto-login failed</string>
    <string name="retrieve_playlists_failed">Could not retrieve playlists</string>
    <string name="no_playlists_found">No playlists found</string>
    <string name="no_songs_in_playlist">No songs in playlist %1$s</string>
    <string name="request_playlist_failed">Could not request playlist</string>
    <string name="pin_required">Enter ListLord Mode first</string>
    <string name="ok">OK</string>
    <string name="invalid_pin">Invalid PIN</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="play">&#xf04b;</string>
    <string name="pause">&#xf04c;</string>
    <string name="skip">&#xf051;</string>
    <string name="no_internet">No internet connection</string>
    <string name="pin_min_length">PIN should contain 4 digits</string>
    <string name="new_pin_set">New PIN set</string>
    <string name="admin_mode">ListLord mode</string>
    <string name="loading">Loading</string>
    <string name="init_spotify_player">Initializing Spotify\u00AE Player</string>
    <string name="leave_admin_mode">Leave ListLord Mode?</string>
    <string name="pin_forced">This action requires authentication. Enter your PIN.</string>
    <string name="about">About</string>
    <string name="about_text">
        <![CDATA[
            <h1>ListLock</h1>
            <h4>Create, lock, add</h4>
            <p>This program is free software: you can redistribute it and/or modify
            it under the terms of the
            <a href="https://www.gnu.org/licenses/gpl.txt">GNU General Public License</a>
            as published by the Free Software Foundation, either version 3 of the
            License, or (at your option) any later version.</p>
            <p>Source code can be found in the <a href="https://github.com/NijzinkM/ListLock">ListLock repository</a> on GitHub.</p>
            <br><br>
            <p>This app uses the <a href="https://developer.spotify.com/technologies/spotify-android-sdk/">Spotify\u00AE Android SDK</a>,
            licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache License</a>.</p>
            <p>Source code can be found in the <a href="https://github.com/spotify/android-sdk">Spotify\u00AE Android SDK repository</a> on GitHub.</p>
            <br>
            <footer>Copyright 2017 Mart Nijzink</footer>
        ]]>
    </string>
    <string name="playback_error">A playback error occurred: %1$s</string>
    <string name="notification_now_playing">%1$s - %2$s</string>
    <string name="notification_title_playing">ListLock is playing</string>
    <string name="notification_title_paused">ListLock is paused</string>
    <string name="no_song_playing">No track playing</string>
</resources>
