<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mart.listlock.playactivity.searchactivity.SearchActivity"
    tools:showIn="@layout/activity_search"
    android:orientation="vertical">

    <View
        android:id="@+id/focus_thief"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/search_field"
            android:inputType="text"
            android:maxLines="1" />

        <Button
            android:id="@+id/search_button"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search"
            android:onClick="onClickSearch"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/search_results_table"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/headers">

            <TextView
                style="@style/Header"
                android:text="@string/header_title"
                android:id="@+id/header_title"
                android:layout_width="match_parent"
                android:layout_weight="0.5"/>

            <TextView
                style="@style/Header"
                android:text="@string/header_artist"
                android:id="@+id/header_artist"
                android:layout_width="match_parent"
                android:layout_weight="0.5"/>

            <TextView
                style="@style/Header"
                android:text="@string/header_duration"
                android:id="@+id/header_duration"
                android:layout_width="wrap_content"/>

        </LinearLayout>

        <View android:layout_width="match_parent"
            android:background="@color/accent"
            android:layout_height="1dp"/>

        <ScrollView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:id="@+id/song_scrollview">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_results_list"/>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/admin_mode_banner"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="0"
        android:onClick="onClickAdminModeBanner"
        android:visibility="gone">

        <View android:layout_width="match_parent"
            android:background="@color/accent"
            android:layout_height="1dp"/>

        <TextView
            style="@style/Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_mode"
            android:gravity="center"/>

        <View android:layout_width="match_parent"
            android:background="@color/accent"
            android:layout_height="1dp"/>

    </LinearLayout>

</LinearLayout>